background added to home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,7 @@
-<h1>¡Bienvenido al Gestor de Canciones!</h1>
-<h2>El mejor del mundo</h2>
+<div class="image-container">
+    <div class="text">
+        ¡Bienvenido al mejor Gestor de Canciones del mundo!
+    </div>
+    
+    
+</div>
